# varbor

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  justfile  varbor.hxx  varborConfig.cmake.in  varbor_test.cxx
src/: varbor.hxx
test/: decoding_array.cxx  decoding_byte_string.cxx  decoding_floats.cxx  decoding_map.cxx  decoding_map_array_mixed_recursive.cxx  decoding_negative_integer.cxx  decoding_positive_integer.cxx  decoding_semantic_tag.cxx  decoding_specials.cxx  decoding_string.cxx  encoding_array.cxx  encoding_byte_string.cxx  encoding_floats.cxx  encoding_map.cxx  encoding_map_array_mixed_recursive.cxx  encoding_negative_integer.cxx  encoding_positive_integer.cxx  encoding_semantic_tag.cxx  encoding_specials.cxx  encoding_string.cxx  equality_array.cxx
